<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingBottom="20dp"
        >

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <FrameLayout
            android:id="@+id/avatar_layout"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="50dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/brightRed"
                android:src="@drawable/catpetanimaldomestic"
                >
            </de.hdodenhof.circleimageview.CircleImageView>

        </FrameLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_below="@id/avatar_layout"
            android:id="@+id/full_name_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <EditText
                android:id="@+id/signup_input_fullname"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:textColorHint="@color/darkGrey"
                android:maxLines="1"
                />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/contactInfo_layout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/darkGrey"
            android:layout_below="@id/full_name_layout"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contactInfo"
                android:textColor="@color/black"
                android:paddingLeft="20dp"
                android:maxLines="1"
                />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_below="@+id/contactInfo_layout"
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <EditText
                android:id="@+id/signup_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/darkGrey"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_below="@+id/email_layout"
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <EditText
                android:id="@+id/signup_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:textColorHint="@color/darkGrey"
                android:inputType="textPassword"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_below="@+id/password_layout"
            android:id="@+id/password_conf_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <EditText
                android:id="@+id/password_conf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_conf"
                android:textColorHint="@color/darkGrey"
                android:inputType="textPassword"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_below="@id/password_conf_layout"
            android:id="@+id/btn_signup"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            />
    </RelativeLayout>
</ScrollView>