<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditProfileActivity"
    android:background="@color/white">



    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/avatar_layout"
        />

    <FrameLayout
        android:id="@+id/avatar_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:background="@color/brightRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/catpetanimaldomestic"></de.hdodenhof.circleimageview.CircleImageView>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/contactInfo_layout"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:background="@color/darkGrey"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/avatar_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:text="@string/contactInfo"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/email_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textStyle="bold"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/contactInfo_layout"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:inputType="text"
        android:maxLength="40"
        android:maxLines="1"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_hint" />

    <TextView
        android:id="@+id/password_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_hint"
        android:textStyle="bold"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:inputType="textPassword"
        android:maxLength="40"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_hint" />

    <TextView
        android:id="@+id/passwordconf_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_conf"
        android:textStyle="bold"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        />

    <EditText
        android:id="@+id/password_conf"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:inputType="textPassword"
        android:maxLength="40"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordconf_hint" />
    <Button
        android:id="@+id/edit_profileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>