<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity"
    android:orientation="vertical"
    android:background="@color/white">
    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/brightRed"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/drink_coffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:text="@string/financial_planner"
        android:textStyle="bold"
        android:textSize="27sp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_account"/>

    <ImageView
        android:id="@+id/Icon_Intro"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/introimage"
        app:layout_constraintTop_toBottomOf="@id/drink_coffee"
        app:layout_constraintBottom_toTopOf="@id/continue_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:text="@string/continue_email"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_below="@+id/drink_coffee"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toBottomOf="@id/Icon_Intro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>



</android.support.constraint.ConstraintLayout>